@@ -37,7 +37,7 @@ in
         profiles = {
           "default" = {
             id = 0;
-            extensions = (with pkgs.nur.repos.rycee.firefox-addons; [
+            extensions.packages = (with pkgs.nur.repos.rycee.firefox-addons; [
               ublock-origin
               onepassword-password-manager
               darkreader
