@@ -5,9 +5,11 @@ in
 {
   programs.vscode = {
     package = mkDefault pkgs.vscodium-fhs;
-    enableExtensionUpdateCheck = false;
-    enableUpdateCheck = false;
-    extensions = import ./extensions.nix { inherit pkgs; };
-    userSettings = import ./settings.nix { inherit pkgs lib; };
+    profiles.default = {
+      enableExtensionUpdateCheck = false;
+      enableUpdateCheck = false;
+      extensions = import ./extensions.nix { inherit pkgs; };
+      userSettings = import ./settings.nix { inherit pkgs lib; };
+    };
   };
 }
